<resources>
    <string name="app_name">ContactApp</string>
    <string name="stringAdd">Add</string>
    <string name="StringDelete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringContactName">Contact Name</string>
    <string name="stringEmail">Email</string>
    <string name="stringPhoneNumber">Phone</string>
    <string name="stringType">Type</string>
    <string name="StringName">Name</string>
    <string name="Stringemail">Email</string>
    <string name="stringPhone">998-980-9888</string>
    <string name="stringDelete">Delete</string>
    <string name="stringUpdate">Update</string>
    <string name="stringCancel">Cancel</string>
    <string name="string" />
    <string name="StringCreateSubmit">Submit</string>

</resources>